# validate-token-rust

./: .gitignore  Cargo.toml  README.md  test.sh  wrangler.toml
src/: lib.rs
