[package]
name = "validate-token-rust"
version = "0.1.0"
edition = "2021"
authors = ["jongsik <jongsik@cloudflare.com>"]

[package.metadata.release]
release = true

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.6" }
worker-macros = { version = "0.6" }
console_error_panic_hook = { version = "0.1.7" }
url = "2.5.7"
js-sys = "0.3.77"
hmac = "0.12.1"
sha2 = "0.10.9"
base64 = "0.22.1"
